fix #31: disable word wrap to avoid misleadingly making a long line look like two lines

--- a/chrome-extension/popup.css
+++ b/chrome-extension/popup.css
@@ -55,6 +55,7 @@ textarea {
     resize: vertical;
     caret-color: lime;
     font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
+    white-space: nowrap;
 }
 
 textarea:hover {
